# eodag

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  BREAKING_CHANGES.rst  CHANGELOG.md  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  NOTICE  README.rst  bitbucket-pipelines.yml  docker-compose.yml  get_pypi_latest_version.sh  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements-docker.txt  requirements-docs.txt  requirements-observability.txt  requirements-tutorials.txt  requirements.txt  setup.cfg  setup.py  system_conf_default.yml  test.json  test.py  test_affichage.py  tox.ini  user_conf_template.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml  deploy.yml  fetch.yml  github-pages.yml  lint-pr-title.yml  package.yml  publish.yml  test.yml
chart/eodag-server/: Chart.yaml  README.md  values.yaml
charts/eodag-server/: Chart.yaml  README.md  values.yaml
data/1007-resume-interrupted-assets-download-using-httpdownload/: coverage.xml
data/1018-download-only-selected-bandsfiles-on-cop_dataspace/: coverage.xml
data/1036-abandonned-dependency-cause-eodag-to-not-work-correctly-on-python-313/: coverage.xml
data/1040-server-type-missing-on-some-queryables/: coverage.xml
data/1047-queryables-mtdmapping/: coverage.xml
data/1084-authentication-error-in-server-mode-download-using-api-plugin/: coverage.xml
data/1125-dedt_lumi-authenticate-with-destination-earth-desp-credentials/: coverage.xml
data/1128-handling-of-empty-response-from-provider/: coverage.xml
data/1129-add-tests-for-oidcauthorizationcodeflowauth/: coverage.xml
data/1130-refresh-token-usage-in-oidcauthorizationcodeflowauth/: coverage.xml
data/1147-use-odata-api-for-creodias-cop_dataspace/: coverage.xml
data/1167-stac-metadata/: coverage.xml
data/1168-search-method-to-return-only-searchresult/: coverage.xml
data/1226-refactor-dates-utils/: coverage.xml
data/1286-document-config-parameters-in-plugins/: coverage.xml
data/1287-handle-cop_marine-in-situ-historical-data/: coverage.xml
data/1302-tests-failing-due-to-issues-with-shapely-and-python-312/: coverage.xml
data/1320-SSL-error/: coverage.xml
data/1328-metadata-mapping-error-with-provider-wekeo/: coverage.xml
data/1337-raise-error-when-request-to-backend-fails/: coverage.xml
data/1339-include-error-from-backend-service-user-when-searching-with-invalid-params/: coverage.xml
data/1345-add-msg-datasets/: coverage.xml
data/1352-add-dedicated-liveness-endpoint/: coverage.xml
data/1355-era5-download-fetches-json-instead-of-data/: coverage.xml
data/1371-update-wekeo-configuration-following-api-changes/: coverage.xml
data/1385-update-tutorials-using-eodag-cube/: coverage.xml
data/1388-some-ecmwf-products-have-invalid-default-parameters/: coverage.xml
data/1398-remove-default-download-zip-extension/: coverage.xml
data/1399-docs-update/: coverage.xml
data/1409-rename-to-wekeosearch/: coverage.xml
data/1414-eodagrest-importerror-in-cli/: coverage.xml
data/1432-add-documentation-about-adding-a-new-product-to-an-existing-provider/: coverage.xml
data/1442-create-a-notebook-about-using-queryables-in-library-mode/: coverage.xml
data/1454-new-mtg-datasets-in-eumetsat/: coverage.xml
data/147-add-MTG-FCI-dataset/: coverage.xml
data/1470-error-in-search-by-id-of-item-from-cop_marine/: coverage.xml
data/1476-search-with-cop_ads-not-working-for-cams_solar_radiation/: coverage.xml
data/1527-deprecated-plugins/: coverage.xml
data/1535-s2_msi_l2ap-depecrated/: coverage.xml
data/1538-cop_dataspace_s3/: coverage.xml
data/1587-update-platform-serial-identifier/: coverage.xml
data/1589-platformSerialIdentifier/: coverage.xml
data/1594-fix-binder-tutos-links/: coverage.xml
data/1598-token-expiration-margin/: coverage.xml
data/1604-instrument-mapped-none/: coverage.xml
data/1617-allow-multiple-download-or-auth-plugins-for-a-single-provider/: coverage.xml
data/1618-new-search-config-entry-assets_mapping/: coverage.xml
data/1664-ssl-context-cache/: coverage.xml
data/1723-new-provider-cci/: coverage.xml
data/1752-alternate-link/: coverage.xml
data/1757-aws-auth-refactor/: coverage.xml
data/1777-geodes-availability/: coverage.xml
data/1820-unparsed-query-parameters/: coverage.xml
data/1824-harmonize-polarizationChannels/: coverage.xml
data/1825-harmonize-orbit-direction/: coverage.xml
data/1829-fedeo-tutorial/: coverage.xml
data/1833-harmonize-query-param/: coverage.xml
data/1835-move-earth-search/: coverage.xml
data/1859-fix-syntax-error/: coverage.xml
data/2145-fix-eoiam-auth-error/: coverage.xml
docker/: otelcol_config.yml  run-stac-server.sh  stac-browser.dockerfile  stac-server.dockerfile
docs/: Makefile  add_collection.rst  add_product_type.rst  add_provider.rst  api.rst  api_user_guide.rst  breaking_changes.rst  changelog.rst  cli_user_guide.rst  conf.py  contribute.rst  drivers.rst  ecosystem.rst  index.rst  install.rst  intro.rst  make.bat  params_mapping.rst  plugins.rst  providers.rst  stac.rst  stac_rest.rst  tutos.rst  use.rst
eodag/: __init__.py  __meta__.py  cache.py  cli.py  config.py  crunch.py
examples/: tuto_advanced.ipynb  tuto_bandmath.ipynb  tuto_bandmath_py2.ipynb  tuto_basic-use_py2.ipynb  tuto_basics.ipynb  tuto_burnt_areas_gpt.ipynb  tuto_burnt_areas_snappy.ipynb  tuto_cop_dem.ipynb  tuto_search_area.ipynb  tuto_ship_detection.ipynb  tuto_stac_client.ipynb
rust/: Cargo.toml
rust/src/: lib.rs  s3.rs
satdl/: cli.py  config.py
sqlite/: collections.json  cql2_sqlite.py  main.py  model.py  test_cql2_sqlite.py
test/: test.ipynb  test.py
tests/: __init__.py  context.py  test_api.py  test_cli.py  test_config.py  test_end_to_end.py  test_requirements.py  utils.py
utils/: collections_information_to_csv.py  ext_collections_cmp.py  ext_product_types_cmp.py  params_mapping_to_csv.py  product_types_information_to_csv.py
(+1165 files in other folders)
