[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "2.12.2.dev0"

[[tool.mypy.overrides]]
module = [
    "click",
    "click.*",
    "ecmwfapi",
    "ecmwfapi.*",
    "eodag_cube.*",
    "geojson",
    "IPython.display",
    "owslib.*",
    "shapefile",
    "shapely",
    "shapely.*",
    "stream_zip",
    "jsonpath_ng",
    "jsonpath_ng.*",
    "rasterio",
    "usgs",
    "usgs.*",
    "whoosh",
    "whoosh.*"
]
ignore_missing_imports = true
