[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "3.4.3.dev0"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[[tool.mypy.overrides]]
module = [
    "click",
    "click.*",
    "ecmwfapi",
    "ecmwfapi.*",
    "eodag_cube.*",
    "geojson",
    "IPython.display",
    "jsonpath_ng",
    "jsonpath_ng.*",
    "owslib.*",
    "pygeofilter",
    "pygeofilter.*",
    "rasterio",
    "shapefile",
    "shapely",
    "shapely.*",
    "stream_zip",
    "usgs",
    "usgs.*",
    "whoosh",
    "whoosh.*"
]
ignore_missing_imports = true

[tool.uv]
cache-keys = [{ git = true }]

[tool.semantic_release.branches.main]
match = "(master|develop)"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore: update external product types reference.+''',
    '''build: bump version.+''',
]
mode = "update"
insertion_flag = "===============\nRelease history\n==============="

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGES.rst"
output_format = "rst"
