[metadata]
name = eodag
description = Earth Observation Data Access Gateway
long_description = file:README.rst
long_description_content_type = text/x-rst
author = CS GROUP - France (CSSI)
author_email = admin@geostorm.eu
url = https://github.com/CS-SI/eodag
license = Apache 2.0
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/CS-SI/eodag/issues/
    Documentation = https://eodag.readthedocs.io
    Source Code = https://github.com/CS-SI/eodag
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click
    requests
    python-dateutil
    PyYAML
    tqdm
    shapely
    pyshp
    owslib < 0.26;python_version>='3.10'
    owslib;python_version<'3.10'
    geojson
    pyproj
    usgs >= 0.3.1
    boto3
    flasgger
    jsonpath-ng
    lxml
    flask >= 1.0.2, != 2.2.0, != 2.2.1
    markdown >= 3.0.1
    whoosh
    pystac >= 1.0.0b1
    ecmwf-api-client

[options.extras_require]
dev = pytest; pytest-cov; pytest-html; tox; faker; moto; twine; wheel; flake8; pre-commit
notebook = tqdm[notebook]
tutorials = eodag-cube >= 0.2.0; jupyter; ipyleaflet >= 0.10.0; ipywidgets; matplotlib; folium; imageio; rasterio
docs = sphinx; sphinx-book-theme >= 0.1.0; sphinx-copybutton; nbsphinx == 0.8.5; markupsafe < 2.1.0
# pined markup safe until fixed in sphinx or jinja
# see https://github.com/pallets/jinja/issues/1585

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

[options.package_data]
* =
    LICENSE
    NOTICE

[options.entry_points]
console_scripts =
    eodag = eodag.cli:eodag
eodag.plugins.api =
    UsgsApi = eodag.plugins.apis.usgs:UsgsApi
    EcmwfApi = eodag.plugins.apis.ecmwf:EcmwfApi
eodag.plugins.auth =
    GenericAuth = eodag.plugins.authentication.generic:GenericAuth
    HTTPHeaderAuth = eodag.plugins.authentication.header:HTTPHeaderAuth
    AwsAuth = eodag.plugins.authentication.aws_auth:AwsAuth
    OAuth = eodag.plugins.authentication.oauth:OAuth
    TokenAuth = eodag.plugins.authentication.token:TokenAuth
    OIDCAuthorizationCodeFlowAuth = eodag.plugins.authentication.openid_connect:OIDCAuthorizationCodeFlowAuth
    KeycloakOIDCPasswordAuth = eodag.plugins.authentication.keycloak:KeycloakOIDCPasswordAuth
eodag.plugins.crunch =
    FilterLatestIntersect = eodag.plugins.crunch.filter_latest_intersect:FilterLatestIntersect
    FilterLatestByName = eodag.plugins.crunch.filter_latest_tpl_name:FilterLatestByName
    FilterOverlap = eodag.plugins.crunch.filter_overlap:FilterOverlap
    FilterProperty = eodag.plugins.crunch.filter_property:FilterProperty
    FilterDate = eodag.plugins.crunch.filter_date:FilterDate
eodag.plugins.download =
    AwsDownload = eodag.plugins.download.aws:AwsDownload
    HTTPDownload = eodag.plugins.download.http:HTTPDownload
    S3RestDownload = eodag.plugins.download.s3rest:S3RestDownload
eodag.plugins.search =
    CSWSearch = eodag.plugins.search.csw:CSWSearch
    QueryStringSearch = eodag.plugins.search.qssearch:QueryStringSearch
    AwsSearch = eodag.plugins.search.qssearch:AwsSearch
    ODataV4Search = eodag.plugins.search.qssearch:ODataV4Search
    PostJsonSearch = eodag.plugins.search.qssearch:PostJsonSearch
    StacSearch = eodag.plugins.search.qssearch:StacSearch
    StaticStacSearch = eodag.plugins.search.static_stac_search:StaticStacSearch

[flake8]
ignore = E203, W503
max_line_length = 120
exclude =
    .git,
    __pycache__,
    .tox,
    build,
    dist,
    docs/conf.py,
    tests/context.py

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
ensure_newline_before_comments = True
known_first_party = eodag,tests
known_third_party = concurrent.futures
default_section = THIRDPARTY
skip =
    .git,
    __pycache__,
    .tox,
    build,
    dist,
    docs/conf.py,
    tests/utils.py,
    eodag/utils/__init__.py,

[pydocstyle]
# Check for docstring presence only
select = D1
add_ignore = D107,D100,D105
# Don't require docstrings for tests or setup
match = (?!test|setup).*\.py
